@@ -9,8 +9,8 @@ import org.example.sharedprompts.domain.payment.config.properties.RetryPropertie
 import org.example.sharedprompts.domain.payment.domain.enums.PaymentMethod;
 import org.example.sharedprompts.domain.payment.domain.enums.PaymentStatus;
 import org.example.sharedprompts.domain.payment.application.facade.PaymentRetryFacade;
+import org.example.sharedprompts.domain.payment.application.port.out.repository.PaymentQueryRepositoryPort;
 import org.example.sharedprompts.domain.payment.infrastructure.monitoring.PaymentLoggingService;
-import org.example.sharedprompts.domain.payment.infrastructure.persistence.adapter.PaymentJpaAdapter;
 import org.example.sharedprompts.domain.payment.application.command.PaymentExecutionService;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
@@ -18,7 +18,6 @@ import org.springframework.stereotype.Component;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 결제 재시도 스케줄러
@@ -30,7 +29,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class PaymentRetryScheduler {
 
-    private final PaymentJpaAdapter paymentJpaAdapter;
+    private final PaymentQueryRepositoryPort paymentQueryRepository;
     private final PaymentExecutionService executionService;
     private final RetryProperties retryProperties;
     private final PaymentRetryFacade retryFacade;
@@ -55,7 +54,7 @@ public class PaymentRetryScheduler {
         log.info("PaymentRetryScheduler started");
 
         // nextRetryAt 기반으로 재시도 가능한 결제 조회 (PENDING 상태만)
-        List<Payment> pendingPayments = paymentJpaAdapter.findRetryablePayments(
+        List<Payment> pendingPayments = paymentQueryRepository.findRetryablePayments(
                 PaymentStatus.PENDING,
                 retryProperties.getMaxAttempts(),
                 LocalDateTime.now()
@@ -78,7 +77,7 @@ public class PaymentRetryScheduler {
         
         List<Payment> retryablePayments = pendingPayments.stream()
                 .filter(payment -> payment.getPaymentMethod() != PaymentMethod.KAKAO_PAY)
-                .collect(Collectors.toList());
+                .toList();
 
         if (retryablePayments.isEmpty()) {
             log.debug("재시도할 결제가 없습니다 (KakaoPay 제외 후).");
